--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <title>Lists Lab</title>
 </head>
 <body>
-
+  <ul>
+    <li>Cheeseburgers</li>
+    <li>Grilled Cheese</li>
+  </ul>
   <!-- Write your HTML in this file -->
 
 </body>
