--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <ul>
     <li>Cheeseburgers</li>
     <li>Grilled Cheese</li>
+    <li>Sushi</li>
+    <li>Nacho Cheese French Fries</li>
+    <li>Cheese Soup</li>
+    <li>Cheese and crackers</li>
   </ul>
   <!-- Write your HTML in this file -->
 
