--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <li>Cheeseburgers</li>
     <li>Grilled Cheese</li>
     <li>Sushi</li>
-      <ul>
-        <li>Spicy Salmon Roll</li>
-      </ul>
+      <ul>Spicy Salmon Roll
     <li>Nacho Cheese French Fries</li>
     <li>Cheese Soup</li>
     <li>Cheese and crackers</li>
