automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <li>Cheeseburgers</li>
     <li>Grilled Cheese</li>
     <li>Sushi</li>
-      <ul>Spicy Salmon Roll
+      <ul>Spicy Salmon Roll</ul>
     <li>Nacho Cheese French Fries</li>
     <li>Cheese Soup</li>
     <li>Cheese and crackers</li>
   </ul>
   <!-- Write your HTML in this file -->
-
+<ol>
+  <li>I love Cheeseburgers</li>
+  <li> I love Grilled Cheese</li>
+  <li>I love Sushi</li>
+</ol>
 </body>
 </html>
 
